[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Simple constrained decoding and LLM project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "llm-sdk"
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
llm-sdk = { path = "./llm_sdk" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
